sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: not found: value tri1
				tri1 = true;
                                ^