sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {

	var length = getNombreValeurs();
	var ecart = length;
	ecart = (ecart.toDouble / 1.3).toInt;

	do{
		if(ecart>1.3)
			ecart = (ecart.toDouble / 1.3).toInt;

		var i = 0;

		while(i+ecart < length) {
			if(plusPetit(i, i+ecart) == false) {
				echange(i, i+ecart);
				i += 1;
				tri1 = true;
			}
		}
	}while(ecart > 1  )
}
